<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="@dimen/padding_sides">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_et_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/text_medium" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_et_pass"
                android:inputType="textPassword"
                android:textSize="@dimen/text_medium" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkboxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/checkbox_remember"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/my_button"
            android:text="@string/btn_login"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/tvRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:linksClickable="false"
            android:text="@string/tv_restore"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />



    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:gravity="bottom"
        android:text="@string/tv_register"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold" />
        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>